# Projects

./: .gitignore  .gitmodules  README.md
.github/: copilot-instructions.md
bashrunner/: __init__.py  example.py
concert/concerts/10-24-25 Freddie Gibbs Chicago at Aragon Ballroom/: data.txt  manifest.json
concert/concerts/9-19-25 Chris Stussy Chicago at Radius/: data.txt  manifest.json
concert/users/: users.csv
concert/webcode/: 10-24-25-Freddie-Gibbs-Chicago-at-Aragon-Ballroom.html  9-19-25-Chris-Stussy-Chicago-at-Radius.html  homepage.html  myconcerts.html  styles.css
concert/webcode/js/: concert-player.js  timeline-renderer.js
concert/webcode/old/: concert-player-old.js  player.html
scripts/: README_AUDIO_SYNC.md  analyze_sync_properly.py  audio_requirements.txt  audio_sync_analyzer.py  convert_and_index.py  run.py  server_launcher_gui.py  simple_http_server.py  sync_instructions.json  test_overlaps.py
scripts/old/: convert_movs_to_mp4.py  generate_video_index.py
sungraph/: sungraph.py  sungraph2.py
synth/: .gitignore  CMakeLists.txt  SYNTH_ARCHITECTURE.md  build.ps1
synth/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
synth/Source/oscillators/: OscillatorBase.h  SawtoothOscillator.h  SineOscillator.h  SquareOscillator.h  TriangleOscillator.h
synth/Source/synth/: ADSRParameters.h  SynthVoice.cpp  SynthVoice.h  VoiceManager.cpp  VoiceManager.h
